--- a/wp-content/themes/assist-trust/css/style.css
+++ b/wp-content/themes/assist-trust/css/style.css
@@ -28,7 +28,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  transition: color .2s;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 p {
@@ -180,39 +183,6 @@ tbody th {
   background-color: #e2e6f0;
 }
 
-/* animate underline */
-
-.link__animated,
-.link__animated-inner > span,
-#menu-footer a {
-  position: relative;
-}
-
-.link__animated:before,
-.link__animated-inner > span:before,
-#menu-footer a:before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: currentColor;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.2s ease-in-out 0s;
-}
-
-.link__animated:hover:before,
-.link__animated:focus:before,
-.link__animated-inner:hover > span:before,
-.link__animated-inner:focus > span:before,
-#menu-footer a:hover:before,
-#menu-footer a:focus:before {
-  visibility: visible;
-  transform: scaleX(1);
-}
-
 /* helpers */
 
 .visually-hidden {
@@ -248,6 +218,10 @@ tbody th {
   transition: background-color .2s;
 }
 
+.button:hover {
+  text-decoration: none;
+}
+
 /* some duplication with *:focus due to specificity conflict with .button */
 .button:focus {
   outline: 1px dashed currentColor;
@@ -270,6 +244,10 @@ tbody th {
   background-color: #fff;
 }
 
+.button__secondary:hover {
+  text-decoration: underline;
+}
+
 .button_small {
   min-height: auto;
   padding: 5px 1rem;
@@ -284,6 +262,10 @@ tbody th {
 
 .content > * + * {
   margin-top: 40px;
+}
+
+.content a {
+  color: #d70c8c;
 }
 
 .header {
@@ -550,7 +532,6 @@ tbody th {
 
 #menu-main a {
   display: block;
-  transition: color .5s;
   color: #fff;
 }
 
@@ -559,6 +540,10 @@ tbody th {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+}
+
+#menu-main button:hover {
+  text-decoration: underline;
 }
 
 #menu-main svg {
