--- a/wp-content/themes/assist-trust/css/style.css
+++ b/wp-content/themes/assist-trust/css/style.css
@@ -766,14 +766,18 @@ tbody th {
 }
 
 .social-icons a {
-  display: block;
-
-  /* IE fix */
-  color: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+  color: #004279;
+  background-color: #fff;
 }
 
 .social-icons a:hover svg {
-  transform: scale(1.3);
+  color:#d70c8c;
 }
 
 @media (min-width: 576px) { /* small devices */
