--- a/wp-content/themes/assist-trust/css/style.css
+++ b/wp-content/themes/assist-trust/css/style.css
@@ -593,7 +593,6 @@ tbody th {
 
 @media (min-width: 576px) { /* small devices */
   .menu-main-container {
-    /* box-shadow: 0 2px 10px #e2e6f0; */
     background-color: #fff;
     top: 20px;
     z-index: 1;
@@ -605,6 +604,10 @@ tbody th {
     right: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
+  }
+
+  .menu-main-container.with-shadow {
+    box-shadow: 0 2px 10px #e2e6f0;
   }
 
   .mega-menu {
